Prevent line wrap in value/code.

--- a/fromjs.css
+++ b/fromjs.css
@@ -34,6 +34,7 @@ body {
 
 .fromjs-horizontal-scroll-container {
     overflow-x: auto;
+    white-space: nowrap;
 }
 .fromjs-horizontal-scroll-container > div {
     display: inline-block;
